--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
         "anthropic": "0.0.0",
         "langchain": "^0.0.73",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "winston": "^3.14.2"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.25.3",
