--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,24 @@
     "description": "Study Buddy client application",
     "main": "src/index.js",
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
         "test": "jest --config jest.config.js",
         "eject": "react-scripts eject"
     },
     "dependencies": {
         "@anthropic-ai/sdk": "^0.26.0",
+        "@google-cloud/local-auth": "^3.0.1",
+        "@googleapis/calendar": "^9.7.6",
+        "@types/gapi": "^0.0.47",
+        "@types/gapi.calendar": "^3.0.11",
         "anthropic": "0.0.0",
+        "googleapis": "^140.0.1",
         "langchain": "^0.0.73",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "winston": "^3.14.2"
+        "react-router-dom": "^6.26.0",
+        "web-vitals": "^4.2.3"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.25.3",
@@ -25,12 +31,27 @@
         "@types/jest": "^29.5.12",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "assert": "^2.0.0",
         "babel-jest": "^29.7.0",
+        "browserify-zlib": "^0.2.0",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
+        "https-browserify": "^1.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "os-browserify": "^0.3.0",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "querystring-es3": "^0.2.1",
+        "react-app-rewired": "^2.2.1",
         "react-scripts": "5.0.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "timers-browserify": "^2.0.12",
         "ts-jest": "^29.2.4",
-        "typescript": "^4.9.5"
+        "typescript": "^4.9.5",
+        "url": "^0.11.0",
+        "util": "^0.12.4"
     },
     "eslintConfig": {
         "extends": [
